# Bril-Toolkit

./: .gitignore  Cargo.toml  LICENSE  README  README.md
src/: bril.rs  config.rs  main.rs  mod.rs
src/analysis/: cprop.rs  dataflow_core.rs  live_vars.rs  mod.rs  reaching_defns.rs
src/bril/: mod.rs  serde_structs.rs
src/bril/transformers/: cfg.rs  mod.rs
src/serde_structs/: basic_types.rs  functions.rs  instructions.rs  mod.rs  operations.rs  program.rs
src/serde_structs/names/: name_mapper.rs  wrapper_names.rs
src/structs/: functions.rs  graph.rs  instructions.rs  mod.rs  operations.rs
src/structs/names/: mod.rs  name_mapper.rs  wrapper_names.rs
src/transformers/: cfg.rs  config.rs  dce.rs  dead_block.rs  dominance.rs  lvn.rs  mod.rs  orphan.rs  ssa.rs
src/utils/: mod.rs  name_mapper.rs
tests/: digital-root.out  example2.out  sample.bril  sample.out  tests.sh  turnt.toml  two-orphan.bril
tests/df/: cond-args-reaching.bril  cond-args-reaching.out  cond-args.out  cond.out  fact-reaching.bril  fact-reaching.out  fact.out  turnt.toml  two-orphan-reaching.bril  two-orphan-reaching.out  two-orphan.bril  two-orphan.out
tests/global_dce/: example2.bril  example2.out  sample.out  turnt.toml  two-orphan.out
tests/local_dce/: turnt.toml
tests/lvn/: bad?.bril  commute.bril  fn_call.bril  fn_call.out  idchain-nonlocal.bril  idchain-prop.bril  idchain.bril  turnt.toml
tests/lvn_bench/: boolean_fun.bril  brench.toml  cond-args.bril  example.toml  fn_call.bril
tests/orphan/: digital-root.out  example2.out  turnt.toml  two-orphan.out
(+3 files in other folders)
