[package]
name = "bril_toolkit"
version = "0.1.0"
authors = ["Griffin Berlstein <griffin@berlste.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bimap = "0.5.2"
clap = "2.33.2"
fnv = "1.0.7"
